# Computer-Graphics-Project

./: .gitignore  CMakeLists.txt  FillingCircles.cpp  README.md  main.cpp
Algorithms/: CircleAlgorithms.cpp  CircleAlgorithms.h  CurveAlgorithms.cpp  CurveAlgorithms.h  EllipseAlgorithms.cpp  EllipseAlgorithms.h  LineAlgorithms.cpp  LineAlgorithms.h
App/: Application.cpp  Application.h
Clipping/: Clipper.cpp  Clipper.h
Core/: Enums.h  InputHandler.cpp  InputHandler.h  Preferences.cpp  Preferences.h  Window.cpp  Window.h
FileSystem/: FileManager.cpp  FileManager.h
Filling/: FillAlgorithms.cpp  FillAlgorithms.h
Menu/: Menu.cpp  Menu.h  MenuCommands.h
Shapes/: Circle.cpp  Circle.h  Curve.cpp  Curve.h  Ellipse.cpp  Ellipse.h  Line.cpp  Line.h  Shape.cpp  Shape.h
Utils/: Color.cpp  Color.h  Logger.cpp  Logger.h  Point.cpp  Point.h
